<resources>
    <string name="app_name">Dragon</string>
    <string name="spin_cities">地区</string>
    <string-array name="cities">   
                   <item>全部</item>
                   <item>北京</item>
                   <item>上海</item>
                   <item>广东</item>
                   <item>安徽</item>
                   <item>江苏</item>
                   <item>浙江</item>
                   <item>其他</item>
     </string-array>
    <string name="spin_need">需求</string>
    <string-array name="needs">
                   <item>全部</item>
                   <item>有技术</item>
                   <item>有创意</item>
                   <item>有项目</item>
                   <item>有资本</item>
                   <item>其他</item>
     </string-array>
    <string name="spin_state">状态</string>
    <string-array name="states">
                   <item>全部</item>
                   <item>有创业意愿</item>
                   <item>有创业项目想法</item>
                   <item>有全职创业中</item>
                   <item>投资人</item>
                   <item>兼职创业中</item>
                   <item>媒体人</item>
                   <item>其他</item>
     </string-array>
    <string name="spin_locate">定位</string>
    <string-array name="locates">
                   <item>全部</item>
                   <item>中国</item>
                   <item>美国</item>
                   <item>世界</item>
                   <item>其他</item>
     </string-array>
    <string name="spin_field">领域</string>
    <string-array name="fields">
                   <item>全部</item>
                   <item>移动开发</item>
                   <item>网站开发</item>
                   <item>数据库开发</item>
                   <item>其他</item>
     </string-array>
    <string name="spin_age">年龄</string>
    <string-array name="ages">
        <item>请选择</item>
        <item>小于25</item>
        <item>25至30</item>
        <item>31至35</item>
        <item>36至40</item>
        <item>大于40</item>
    </string-array>
    <string name="no_internet">无网络连接~！</string>
	<string name="generic_server_down">连接服务器失败~！</string>
	<string name="generic_error">网络异常,请稍后再试~！</string>
	<string name="f3_chat">聊天</string>
	<string name="f3_people">联系人</string>
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开立即刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    <string name="tv_loading">正加载,请稍后...</string>
    <string name="no_data">网络异常...</string>
    <string name="news">消息</string>
    <string name="user_feel">好好学习,天天向上</string>
    <string name="user_time">12:30</string>
    <string name="tv_search">搜索</string>
    <string name="notif_server_starting">远程管理已开启</string>
    <string name="notif_title">远程管理</string>
    <string name="wifi_state">WLAN 状态</string>
    <string name="instruction_pre">启动服务，可以从电脑远程管理手机文件</string>
    <string name="instruction">请在"我的电脑"地址栏输入:</string>
    <string name="no_wifi_hint">没有WLAN网络，请检查WLAN设置</string>
    <string name="start_server">开启服务</string>
    <string name="stop_server">停止服务</string>
    <string name="no_wifi">没有WLAN网络</string>
    <string name="storage_warning">没有外部存储设备或SD卡不可用</string>
    <string name="wifi">文件管理</string>
    <string name="scan_tip">请将二维码置于取景框内扫描</string>
    <string name="scan_retry">二维码扫描出错啦,请重新扫描</string>
    <string name="scan_title">扫一扫</string>
    <string name="sd_pic">相册</string>
    <string name="sacn_dialog_title">是否打开链接?</string>
    <string name="scan_url">http://www.baidu.com</string>
    <string name="cancle">取消</string>
    <string name="sure">确定</string>
    <string name="camera_water">水印相机</string>
    <string name="camera_more">更多</string>
    <string name="camera_day">2014-04-14</string>
    <string name="camera_hour">21:01</string>
    <string name="camera_day_hour">2014-04-14 21:01</string>
    <string name="camera_address">珠海</string>
    <string name="camera_tep">23℃多云</string>
    <string name="camera_pm">PM2.5 32</string>
    <string name="camera_txt">静静的享受独自一个人的午后</string>
    <string name="camera_ni">虫虫</string>
    <string name="tiaozheng">旋转</string>
    <string name="control">管理</string>
    <string name="group">分组</string>
    <string name="all">全部</string>
    <string name="cnews">消息</string>
    <string name="call">通话</string>
    <string name="tv_phone">通讯录</string>
    <string name="tv_group">群组</string>
    <string name="tv_discuss">讨论组</string>
    <string name="tv_life">生活服务</string>
    <string name="friend_group">好友分组</string>
    <string name="device">我的设备</string>
    <string name="group_count">1/2</string>
    <string name="child_feel">[在线]好好学习天天向上</string>
    <string name="tv_call1">你通话过的联系人都会在这里出现</string>
    <string name="tv_call2">快和朋友开始语音通话吧</string>
    <string name="btn_call">找人聊聊</string>
    <string name="title_register_info">设置密码和昵称</string>
    <string name="tv_qq">你已获得QQ号码</string>
    <string name="tv_qq_number">525203053</string>
    <string name="tv_register_result">启用通讯录查找更多好友,直接发起QQ聊天,我已阅读并同意</string>
    <string name="tv_tiaokuan">服务声明</string>
    <string name="tv_register_success">注册成功</string>
    <string name="register_success">进入QQ</string>
    <string name="pop_chat">多人聊天</string>
    <string name="pop_sangzhao">分享</string>
    <string name="pop_camera">水印相机</string>
    <string name="pop_scan">扫一扫</string>
    <string name="app_cancle">取消</string>
    <string name="app_change_user">注销用户</string>
    <string name="app_exit_user">退出</string>
    <string name="recentchat">最近聊天</string>
    <string name="choose_constact">选择联系人</string>
    <string name="search">请输入关键字</string>
    <string name="dynamic">动态</string>
    <string name="mime">我</string>
    <string name="tv_newfriend">新朋友</string>
    <string name="tv_tongxunlu">通讯录</string>
    <string name="tv_friend">QQ好友</string>
	<string name="dir">/eim</string>
	<string name="app_dir">/app</string>
	<string name="db_dir">/database</string>
	<string name="img_dir">/img</string>
    <string name="check_sys_msg">查看系统消息</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="delete_user_confim">删除用户会将该用户所有聊天记录一并删除，是否继续?</string>
    <string name="new_message">收到新短消息</string>
    <string name="constacts">联系人</string>
    <string name="action_settings">Setting</string>
    <string name="exit_app">你确定要退出登录吗？</string>
    <string name="dismiss">隐藏</string>
    <string name="confirm">确定</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_conversation_messages">删除会话和消息</string>
    <string name="delete_conversation">删除会话</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="set">设置</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="yangshengqi">使用扬声器播放语音</string>
    <string name="book_black">通讯录黑名单</string>
    <string name="session">会话</string>
    <string name="address_book">通讯录</string>
    <string name="setting">设置</string>
    <string name="now_refresh_list">正在刷新联系人</string>
    <string name="Application_and_notify">申请与通知</string>
    <string name="save_new_nickname">保存</string>
    <string name="nickname_description">设置此昵称以后，在与iOS客户端demo聊天过程中，iOS一侧会显示此昵称而不是环信ID，如果对方使用安卓客户端则此设置不生效</string>
    <string name="group_chat">群聊</string>
    <string name="chat_room">聊天室</string>
    <string name="add_friend">添加好友</string>
    <string name="search1">搜索</string>
    <string name="black_item">黑名单</string>
    <string name="diagnose">诊断</string>
    <string name="push_nick">iOS离线推送昵称</string>
    <string name="Current_version">当前版本</string>
    <string name="Not_Set">未设置</string>
    <string name="Upload_the_log">上传日志中</string>
    <string name="The_new_group_chat">新建群组</string>
    <string name="add_public_group_chat">添加公开群</string>
    <string name="add_public_chat_room">添加聊天室</string>
    <string name="group_name">群聊名称</string>
    <string name="Group_chat_profile">群聊简介</string>
    <string name="Whether_the_public">是否公开</string>
    <string name="Open_group_members_invited">开放群成员邀请</string>
    <string name="Open_group_chat">公开的群聊</string>
    <string name="blacklist">黑名单列表</string>
    <string name="Empty_the_chat_record">清空聊天记录</string>
    <string name="Shielding_of_the_message">屏蔽群消息</string>
    <string name="dismiss_group">解散群聊</string>
    <string name="Select_the_contact">选择联系人</string>
    <string name="Group_chat_information">群聊资料</string>
    <string name="Group_of_Lord">群主</string>
    <string name="Introduction">简介</string>
    <string name="To_join_the_chat">加入群聊</string>
    <string name="login">登录</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="confirmpassword">确认密码</string>
    <string name="downwaiting">正在下载文件请稍后</string>
</resources>