<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical" >
    <com.dlam.ui.TitleLayout 
        android:id="@+id/include_title"
        android:layout_width="match_parent"
        android:layout_height="50dp">
    </com.dlam.ui.TitleLayout>
    
    <ScrollView 
        android:id="@+id/d_com_sc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/include_title">
        
    <RelativeLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_record"
        
        android:text="创业档案（必填）"
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:textSize="18sp"
        android:background="#CDCDCD"
        android:gravity="center_vertical"
        />
    
    <TextView
        android:id="@+id/tv_state" 
        android:text="目前状态"
        android:layout_width="wrap_content"
        android:layout_height="45dip"
        android:textSize="14sp"
        android:layout_below="@id/tv_record"
        android:background="#FFF" 
        android:gravity="center"
        android:layout_marginLeft="5dip"
        />
   
    <Spinner
        android:id="@+id/sp_state"
   		android:layout_width="wrap_content"
   		android:layout_height="45dip"  
   		android:textSize="14sp"
   		android:textColor="#FFB6A5"
        android:layout_below="@id/tv_record"
        android:background="#FFF" 
        android:gravity="right"
        android:layout_marginLeft="60dip"
        android:layout_gravity="right"
        android:prompt="@string/spin_state"
        android:layout_marginRight="5dip"
        android:entries="@array/states"
        android:layout_toRightOf="@id/tv_state"   
        />
    
    <ImageView
        android:id="@+id/iv_line"
        android:background="@drawable/a_line" 
        android:layout_below="@id/sp_state"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        />
    
        <TextView
        android:id="@+id/tv_locate" 
        android:text="个人定位"
        android:layout_width="wrap_content"
        android:layout_height="45dip"
        android:textSize="14sp"
        android:layout_below="@id/iv_line"
        android:background="#FFF" 
        android:gravity="center"
        android:layout_marginLeft="5dip"
        />
   
    <Spinner
        android:id="@+id/sp_locate"
   		android:layout_width="wrap_content"
   		android:layout_height="45dip"  
   		android:textSize="14sp"
   		android:layout_marginLeft="60dip"
   		android:textColor="#FFB6A5"
        android:layout_below="@id/iv_line"
        android:background="#FFF" 
        android:gravity="center|right"
        android:prompt="@string/spin_state"
        android:entries="@array/states"
        android:layout_toRightOf="@id/tv_locate" 
        android:layout_marginRight="5dip"  
        />
    
    <ImageView
        android:id="@+id/iv_line1"
        android:background="@drawable/a_line" 
        android:layout_below="@id/sp_locate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        />
    
    
    <TextView
        android:id="@+id/tv_focus" 
        android:text="关注领域"
        android:layout_width="wrap_content"
        android:layout_height="45dip"
        android:textSize="14sp"
        android:layout_below="@id/iv_line1"
        android:background="#FFF" 
        android:gravity="center"
        android:layout_marginLeft="5dip"
        />
   
    <Spinner
        android:id="@+id/sp_focus"
   		android:layout_width="wrap_content"
   		android:layout_height="45dip"  
   		android:textSize="14sp"
        android:layout_below="@id/iv_line1"
        android:background="#FFF" 
        android:textColor="#FFB6A5"
        android:gravity="center|right"
        android:prompt="@string/spin_state"
        android:entries="@array/states"
        android:layout_toRightOf="@id/tv_focus" 
        android:layout_marginRight="5dip"  
        android:layout_marginLeft="60dip"
        />
    <TextView
        android:id="@+id/tv_person_record"
        android:layout_below="@id/sp_focus"
        android:text="个人档案"
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:textSize="18sp"
        android:background="#CDCDCD" 
        />
	
    <com.dlam.ui.RoundImageView
        android:id="@+id/ib_logo" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tv_person_record"
        android:background="@drawable/d_userpic"
        android:scaleType="center"
        android:gravity="center"
        android:layout_marginRight="5dip"
        />
    <TextView
        android:id="@+id/tv_logo" 
        android:text="头像"
        android:layout_width="wrap_content"
        android:layout_height="45dip"
        android:textSize="14sp"
        android:layout_below="@id/tv_person_record"
        android:background="#FFF" 
        android:gravity="center"
        android:layout_marginLeft="5dip"
        />
    <ImageView
        android:id="@+id/iv_line2"
        android:background="@drawable/a_line" 
        android:layout_below="@id/tv_logo"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        />
    <TextView
        android:id="@+id/tv_name" 
        android:text="姓名（必填、推荐实名）"
        android:layout_width="wrap_content"
        android:layout_height="45dip"
        android:textSize="14sp"
        android:layout_below="@id/iv_line2"
        android:background="#FFF" 
        android:gravity="center"
        android:layout_marginLeft="5dip"
        />
    <EditText
        android:id="@+id/et_name" 
        android:hint="请填写"
        android:textColorHint="#FFB6A5"
        android:textColor="#FFB6A5"
        android:background="#FFF"
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:textSize="14sp"
        android:layout_marginRight="5dip"
        android:layout_toRightOf="@id/tv_name"
        android:layout_below="@id/iv_line2"
        android:gravity="center|right"
        android:layout_marginLeft="5dip"
        />
    <ImageView
        android:id="@+id/iv_line3"
        android:background="@drawable/a_line" 
        android:layout_below="@id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        />
    
      <TextView
        android:id="@+id/tv_sex" 
        android:text="性别"
        android:layout_width="wrap_content"
        android:layout_height="45dip"
        android:textSize="14sp"
        android:layout_below="@id/iv_line3"
        android:background="#FFF" 
        android:gravity="center"
        android:layout_marginLeft="5dip"
        />
   
    <RadioGroup
        android:id="@+id/rg"
   		android:layout_width="match_parent"
   		android:layout_height="45dip"  
   		android:textSize="14sp"
        android:layout_below="@id/iv_line3"
        android:background="#FFF" 
        android:layout_marginLeft="50dip"
        android:orientation="horizontal"
        android:layout_toRightOf="@id/tv_sex" 
        android:layout_marginRight="5dip"  
        >
        <RadioButton 
            android:id="@+id/rb1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="男"
            
            />
        <RadioButton 
            android:id="@+id/rb2"
            android:layout_marginLeft="50dip"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="女"
            />
        
    </RadioGroup>
    
    <ImageView
        android:id="@+id/iv_line4"
        android:background="@drawable/a_line" 
        android:layout_below="@id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        />
     <TextView
        android:id="@+id/tv_address" 
        android:text="地区（必填）"
        android:layout_width="wrap_content"
        android:layout_height="45dip"
        android:textSize="14sp"
        android:layout_below="@id/iv_line4"
        android:background="#FFF" 
        android:gravity="center"
        android:layout_marginLeft="5dip"
        />
    <Spinner
        android:id="@+id/sp_area"
   		android:layout_width="wrap_content"
   		android:layout_height="45dip"  
   		android:textSize="14sp"
        android:layout_below="@id/iv_line4"
        android:background="#FFF" 
        android:textColor="#FFB6A5"
        android:gravity="center|right"
        android:prompt="@string/spin_cities"
        android:entries="@array/cities"
        android:layout_toRightOf="@id/tv_address" 
        android:layout_marginRight="5dip"  
        android:layout_marginLeft="60dip"
        />
    
    <ImageView
        android:id="@+id/iv_line5"
        android:background="@drawable/a_line" 
        android:layout_below="@id/sp_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        />
    
    <TextView
        android:id="@+id/d_tv_age" 
        android:text="年龄"
        android:layout_width="wrap_content"
        android:layout_height="45dip"
        android:textSize="14sp"
        android:layout_below="@id/iv_line5"
        android:background="#FFF" 
        android:gravity="center"
        android:layout_marginLeft="5dip"
        />
    
    <Spinner
        android:id="@+id/sp_age"
   		android:layout_width="wrap_content"
   		android:layout_height="45dip"  
   		android:textSize="14sp"
   		android:layout_marginLeft="60dip"
   		android:textColor="#FFB6A5"
        android:layout_below="@id/iv_line5"
        android:background="#FFF" 
        android:gravity="center|right"
        android:prompt="@string/spin_age"
        android:entries="@array/ages"
        android:layout_toRightOf="@id/d_tv_age" 
        android:layout_marginRight="5dip"  
        />
    
    <ImageView
        android:id="@+id/iv_line6"
        android:background="@drawable/a_line" 
        android:layout_below="@id/d_tv_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        />
    
    
     <TextView
        android:id="@+id/d_com_remand"
        android:layout_below="@id/iv_line6"
        android:text="需求（选填）"
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:textSize="18sp"
        android:background="#CDCDCD" 
        />
      
     <TextView
        android:id="@+id/d_tv_tag" 
        android:text="标签"
        android:layout_width="wrap_content"
        android:layout_height="45dip"
        android:textSize="14sp"
        android:layout_below="@id/d_com_remand"
        android:background="#FFF" 
        android:gravity="center"
        android:layout_marginLeft="5dip"
        />
     
     <EditText
        android:id="@+id/d_com_et_tag" 
        android:hint="请填写"
        android:textColorHint="#FFB6A5"
        android:textColor="#FFB6A5"
        android:background="#FFF"
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:textSize="14sp"
        android:layout_marginRight="5dip"
        android:layout_toRightOf="@id/d_tv_tag"
        android:layout_below="@id/d_com_remand"
        android:gravity="center|right"
        android:layout_marginLeft="5dip"
        />
     
     <ImageView
        android:id="@+id/iv_line7"
        android:background="@drawable/a_line" 
        android:layout_below="@id/d_com_et_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        />
     
     <TextView
        android:id="@+id/d_tv_focusarea" 
        android:text="关注领域"
        android:layout_width="wrap_content"
        android:layout_height="45dip"
        android:textSize="14sp"
        android:layout_below="@id/iv_line7"
        android:background="#FFF" 
        android:gravity="center"
        android:layout_marginLeft="5dip"
        />
     
     <EditText
        android:id="@+id/d_com_et_focusarea" 
        android:hint="请填写"
        android:textColorHint="#FFB6A5"
        android:textColor="#FFB6A5"
        android:background="#FFF"
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:textSize="14sp"
        android:layout_marginRight="5dip"
        android:layout_toRightOf="@id/d_tv_focusarea"
        android:layout_below="@id/iv_line7"
        android:gravity="center|right"
        android:layout_marginLeft="5dip"
        />
     
     <ImageView
        android:id="@+id/iv_line8"
        android:background="@drawable/a_line" 
        android:layout_below="@id/d_com_et_focusarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        />
     
     <TextView
        android:id="@+id/d_tv_project" 
        android:text="项目"
        android:layout_width="wrap_content"
        android:layout_height="45dip"
        android:textSize="14sp"
        android:layout_below="@id/iv_line8"
        android:background="#FFF" 
        android:gravity="center"
        android:layout_marginLeft="5dip"
        />
     
     <EditText
        android:id="@+id/d_com_et_project" 
        android:hint="请填写"
        android:textColorHint="#FFB6A5"
        android:textColor="#FFB6A5"
        android:background="#FFF"
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:textSize="14sp"
        android:layout_marginRight="5dip"
        android:layout_toRightOf="@id/d_tv_project"
        android:layout_below="@id/iv_line8"
        android:gravity="center|right"
        android:layout_marginLeft="5dip"
        />
     
     <ImageView
        android:id="@+id/iv_line9"
        android:background="@drawable/a_line" 
        android:layout_below="@id/d_com_et_project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        />
     
     <TextView
        android:id="@+id/d_tv_personalintro" 
        android:text="个人简介"
        android:layout_width="wrap_content"
        android:layout_height="45dip"
        android:textSize="14sp"
        android:layout_below="@id/iv_line9"
        android:background="#FFF" 
        android:gravity="center"
        android:layout_marginLeft="5dip"
        />
     
     <EditText
        android:id="@+id/d_com_et_personalintro" 
        android:hint="请填写"
        android:textColorHint="#FFB6A5"
        android:textColor="#FFB6A5"
        android:background="#FFF"
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:textSize="14sp"
        android:layout_marginRight="5dip"
        android:layout_toRightOf="@id/d_tv_personalintro"
        android:layout_below="@id/iv_line9"
        android:gravity="center|right"
        android:layout_marginLeft="5dip"
        />
    </RelativeLayout>
  </ScrollView>
</RelativeLayout>

